# draftnik

./: README.md
dashboard/: README.md  docker-compose.yml  package.json
dashboard/public/: index.html  manifest.json  privacy-policy.html
dashboard/src/: constants.js  index.js
dashboard/src/actions/: index.js  types.js
dashboard/src/api/: draftnik.js
dashboard/src/components/: App.js  Dashboard.js  FixturesView.js  Header.js  PrivacyPolicy.js  SharedDraft.js  SharedDraftNotFound.js  SignIn.js  SignUp.js  SquadDisplay.js  SquadSelector.js  SquadView.js
dashboard/src/reducers/: collectionsReducer.js  draftsReducer.js  fixturesReducer.js  gameweeksReducer.js  index.js  loadingReducer.js  playersReducer.js  (+2 more)
draftnik/: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  zappa_settings.json
draftnik/drafter/: admin.py  exceptions.py  models.py  serializers.py  taxonomies.py  urls.py  views.py
draftnik/drafter/management/commands/: init_data.py
draftnik/drafter/migrations/: 0001_initial.py  0002_auto_20200726_1019.py  0003_auto_20200726_1028.py  0004_auto_20200807_1805.py  0005_gameweek.py  0006_auto_20200913_0343.py  0007_auto_20200913_0350.py  0008_draft_unavailable.py  0009_draft_cloned.py  0010_collection.py
draftnik/draftnik/: asgi.py  celery.py  keys.py  settings.py  urls.py  wsgi.py
draftnik/helpers/: instances.py
draftnik/jobs/: fpl_static.py  one_time.py  preview.py  squad_entries.py
draftnik/ops/: .env.template
draftnik/utils/: jwt.py  static.py
experiment/: .gitignore  README.md  experiment.ipynb  screenshot.ipynb  transfersPage.js
extension/: .babelrc  CHANGELOG.md  README.md  package.json  webpack.js
extension/public/: manifest.json  options.html  popup.html
extension/src/: background.js  constants.js  content.js  options.js  placeholderConstants.js  popup.js
(+84 files in other folders)
