[tool.poetry]
name = "draftnik"
version = "0.1.0"
description = ""
authors = ["Alex Mathew <alexmathew003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.11.0"
django = "2.1.9"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
ipdb = "^0.13.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
