[tool.poetry]
name = "draftnik"
version = "0.1.0"
description = ""
authors = ["Alex Mathew <alexmathew003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.11.0"
django = "^3.0.8"
psycopg2-binary = "^2.8.5"
redis = "^3.5.3"
requests = "^2.24.0"
django-cors-headers = "^3.4.0"
djoser = "^2.0.3"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
ipdb = "^0.13.3"
black = "^19.10b0"

[tool.isort]
multi_line_output=3
skip="migrations"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
