[tool.poetry]
name = "draftnik"
version = "0.1.0"
description = ""
authors = ["Alex Mathew <alexmathew003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.11.0"
django = "3.1"
psycopg2-binary = "^2.8.5"
redis = "^3.5.3"
requests = "^2.24.0"
django-cors-headers = "^3.4.0"
djoser = "^2.0.3"
celery = "^4.4.7"
zappa-django-utils = "^0.4.1"
django-rest-framework-social-oauth2 = "^1.1.0"
PyJWT = "^1.7.1"
selenium = "^3.141.0"
boto3 = "^1.14.56"
django-s3-storage = "^0.13.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
django-s3-storage = "^0.13.3"
ipython = "^7.31.1"
ipdb = "^0.13.3"

[tool.isort]
multi_line_output=3
skip="migrations"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
